# embedded-project

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  LICENSE  MODULE.bazel  README.md  explain.txt  swProjectNeeds.puml  tools.txt  user.bazelrc
.github/workflows/: pull-requests.yaml  test-artifactory.yaml
constraints/: BUILD
f2838/: swArchitecture.puml
f2838/mcal/: BUILD  README.md
f2838/mcal/inc/: BUILD
f2838/os/: BUILD  README.md  tasks.c
f2838/os/include/: BUILD  FreeRTOSConfig.h
f2838/os/portable/: BUILD  portASM.asm  portmacro.h
f2838/public/: BUILD  public_types.h
f2838/swe/app/: BUILD  appDefines.h  main.c
f2838/swe/app/linker/: BUILD
f2838/swe/app/src/main/: BUILD  MODULE.bazel  main.c
f2838/swe/app/tasks/: BUILD
f2838/swe/linker/: BUILD  MemoryMapConfigured.md  app.ld  app.ldscript
f2838/units/: BUILD
f2838/units/sysHwCfg/: BUILD
f2838/units/sysHwCfg/app/: BUILD  sysHwCfg_init.c
f28p65/: swArchitecture.puml
f28p65/mcal/: BUILD
f28p65/mcal/inc/: BUILD
f28p65/os/: BUILD
f28p65/os/include/: BUILD
f28p65/os/portable/: BUILD
f28p65/public/: BUILD
f28p65/swe/app/: BUILD  appDefines.h  main.c
f28p65/swe/app/tasks/: BUILD  FreeRTOSConfig.h  task10msQm.c  task10msQm.h  tasksCmn.c  tasksCmn.h
f28p65/swe/linker/: app.ld
f28p65/units/: BUILD
f28p65/units/drvLedCtrl/: BUILD
f28p65/units/sysHwCfg/: BUILD
f28p65/units/sysHwCfg/app/: BUILD  sysHwCfg_init.c  sysHwCfg_init.h
machine/evalBoard/: .clang-format  BUILD
machine/evalBoard/arduinoLeonardo/: BUILD  README.md  main.c
machine/evalBoard/sumobotBlackMagic/: BUILD  README.md
machine/evalBoard/tmdscncd28p65x/: BUILD  README.md  swArchitecture.puml
machine/evalBoard/tmdscncd28p65x/public/: BUILD  public_types.h
machine/evalBoard/tmdscncd28p65x/swe/app/: BUILD  appDefines.h  codestart.asm  main.c
machine/evalBoard/tmdscncd28p65x/swe/app/tasks/: BUILD  FreeRTOSConfig.h  task10msQm.c  task10msQm.h  tasksCmn.c  tasksCmn.h
machine/evalBoard/tmdscncd28p65x/swe/linker/: BUILD  MemoryMapC2000.md  MemoryMapConfigured.md  app.ld
machine/evalBoard/tmdscncd28p65x/units/: BUILD  README.md
machine/evalBoard/tmdscncd28p65x/units/drvLedCtrl/: BUILD  README.md  drvLedCtrl.c  drvLedCtrl.h  drvLedCtrl_test.cc
machine/evalBoard/tmdscncd28p65x/units/drvLedCtrl/code/: BUILD  drvLedCtrl.c  drvLedCtrl.h
machine/evalBoard/tmdscncd28p65x/units/drvLedCtrl/test/: BUILD  drvLedCtrl_test.cc
machine/evalBoard/tmdscncd28p65x/units/sysHwCfg/: BUILD  README.md
machine/evalBoard/tmdscncd28p65x/units/sysHwCfg/app/: BUILD  sysHwCfg_init.c  sysHwCfg_init.h
machine/sumobotBlackMagic/: BUILD  README.md  main.c
machine/sumobotBlackMagic/components/sysHwCfg/: BUILD  sysHwCfg_init.c  sysHwCfg_init.h  sysHwCfg_init_test.cc
machine/sumobotBlackMagic/components/sysHwCfg/code/: BUILD  sysHwCfg_init.c  sysHwCfg_init.h
machine/sumobotBlackMagic/components/sysHwCfg/test/: BUILD
os/freertos/: BUILD  README.md
os/freertos/c28/: BUILD
os/freertos/include/: BUILD
toolchain/: BUILD  c2000.BUILD  c2000.bzl  c28.BUILD  cc_binary_c2000.bzl  cc_binary_native.bzl  cc_toolchain_config.bzl  debug.bzl
toolchain/avr8/: BUILD  avr8.BUILD  avr8.bzl  avr_toolchain_config.bzl
toolchain/c28/: c2000.BUILD  cc_binary_c2000.bzl  cc_toolchain_config.bzl  debug.bzl
tools/llvm/: BUILD  clang_format.bzl  clang_format_check.py  clang_format_fix.py  clang_tidy_check.py  llvm.BUILD
