###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

# --------------------- External Dependencies ---------------------- #
# bazel fetch @ti_cgt_c2000//...
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "ti_cgt_c2000",
    urls = ["file:///C:/tools/cl2000.zip"],
    strip_prefix = "",
    sha256 = "37dc48e3b040f439b52c189a043af652b51792e513e47585f3e4973c6909ca08",
    build_file = "//platforms/c2000/toolchain:c2000.BUILD",
)

# AVR8 Toolchain Dependency
avr8_toolchain = use_extension("//platforms/avr8/toolchain:extension.bzl", "avr8_toolchain_extension")
use_repo(avr8_toolchain, "avr8_compiler")

# LLVM Toolchain Dependency
http_archive(
    name = "llvm_toolchain",
    urls = ["https://github.com/llvm/llvm-project/releases/download/llvmorg-21.1.7/clang+llvm-21.1.7-x86_64-pc-windows-msvc.tar.xz"],
    strip_prefix = "clang+llvm-21.1.7-x86_64-pc-windows-msvc",
    sha256 = "70a2b73f2f14f787557f90abf380e7170b54e97b893218999144de5284b4f8f8",
    build_file = "//tools/llvm:llvm.BUILD"
)

# GCC Toolchain Dependency
http_archive(
    name = "gcc_toolchain",
    urls = ["https://ftp.fu-berlin.de/unix/languages/gcc/releases/gcc-15.2.0/gcc-15.2.0.tar.xz"],
    strip_prefix = "gcc-15.2.0",
    sha256 = "438fd996826b0c82485a29da03a72d71d6e3541a83ec702df4271f6fe025d24e",
    build_file = "//platforms/gcc/toolchain:gcc.BUILD"
)

# General Dependencies
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

# Google Test
bazel_dep(name = "googletest", version = "1.17.0")

# Doxygen Integration
bazel_dep(name = "rules_doxygen", version = "2.6.1")
doxygen_extension = use_extension("@rules_doxygen//:extensions.bzl", "doxygen_extension")
use_repo(doxygen_extension, "doxygen")

# --------------- Register Execution Platforms ---------------- #
register_execution_platforms(
    "//platforms:linux_x86_64_exec",
    "//platforms:windows_x86_64_exec",
)

# ------------------ Toolchain Registration ------------------- #
register_toolchains("//platforms/c2000/toolchain:c2000_toolchain_windows")
register_toolchains("//platforms/avr8/toolchain:avr8_toolchain")
register_toolchains("//platforms/gcc/toolchain:gcc_toolchain_windows")
